# findupe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: architecture.md  faq.md  how-to.md  report-guide.md
docs/superpowers/specs/: 2026-07-09-dupefinder-design.md  2026-07-11-report-split-and-release-automation.md  2026-07-12-make-problems-loud.md  2026-07-12-scan-history-and-dashboard.md
examples/: CREDITS.md
examples/inbox/: dunes.heic  notes.txt
src/dupefinder/: __init__.py  cache.py  cli.py  dashboard.py  discover.py  grouping.py  hashing.py  imaging.py  ledger.py  models.py  report.py  stats.py  trash.py
src/findupe/: __init__.py  cache.py  cli.py  clones.py  config.py  dashboard.py  discover.py  grouping.py  imaging.py  ledger.py  models.py  ocr.py  paths.py  report.py  screenshots.py  stats.py  trash.py
tests/: conftest.py  test_cli.py  test_clones.py  test_config.py  test_dashboard.py  test_demo.py  test_discover.py  test_discriminate.py  test_e2e.py  test_grouping.py  test_hashing_cache.py  test_imaging.py  test_ledger.py  test_ocr.py  test_paths.py  test_report.py  test_screenshots.py  test_stats.py  test_trash_apply.py
