[project]
name = "dupefinder"
version = "0.1.0"
description = "Safe duplicate finder & reviewer for macOS — exact + perceptual image matching, review-first deletion to Trash"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "pillow>=12.0",
    "pillow-heif>=1.4",
    "imagehash>=4.3.2",
    "rawpy>=0.27",
    "pybktree>=1.1",
]

[project.scripts]
dupefinder = "dupefinder.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dupefinder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
