[project]
name = "findupe"
version = "0.4.0"
description = "Safe duplicate finder & reviewer for macOS — exact + perceptual image matching, review-first deletion to Trash"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "JayaShankar Mangina", email = "jyshnkr.ai@gmail.com" }]
keywords = ["duplicates", "deduplication", "photos", "images", "macos", "cli", "perceptual-hash"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "pillow>=12.0",
    "pillow-heif>=1.4",
    "imagehash>=4.3.2",
    "rawpy>=0.27",
    "pybktree>=1.1",
]

[project.urls]
Homepage = "https://github.com/jyshnkr/findupe"
Repository = "https://github.com/jyshnkr/findupe"
Changelog = "https://github.com/jyshnkr/findupe/blob/main/CHANGELOG.md"

[project.scripts]
findupe = "findupe.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "commitizen>=4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/findupe"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
version_scheme = "pep440"
tag_format = "v$version"
major_version_zero = true
update_changelog_on_bump = true
changelog_incremental = true
changelog_file = "CHANGELOG.md"
annotated_tag = true
